--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.33.0",
+    "chart.js": "^3.7.0",
     "hammerjs": "^2.0.8",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bar-chart": "^0.1.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-fusioncharts": "^3.1.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
