--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.1",
+    "@mui/x-data-grid": "^5.5.1",
     "@progress/kendo-drawing": "^1.16.1",
     "@progress/kendo-licensing": "^1.2.1",
     "@progress/kendo-react-charts": "^4.14.1",
@@ -17,6 +21,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bar-chart": "^0.1.2",
     "react-chartjs-2": "^4.0.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-fusioncharts": "^3.1.2",
     "react-scripts": "4.0.3",
